Solved loader not showing up on restart

--- a/src/app/features/game-view/grid-container/grid-container.component.css
+++ b/src/app/features/game-view/grid-container/grid-container.component.css
@@ -50,6 +50,7 @@
 
 .get-loader {
   width: 50px;
+  height: 50px;
   margin-left: 42%;
 }
 
